--- a/JuegoZombis/MotorOla/Projects/MotorOlaProject/MotorOlaProject.vcxproj
+++ b/JuegoZombis/MotorOla/Projects/MotorOlaProject/MotorOlaProject.vcxproj
@@ -7,9 +7,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LuaProject\LuaProject.vcxproj">
-      <Project>{ed44e356-cdf5-4484-9381-afe04e19a34c}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\OgreProject\OgreProject.vcxproj">
       <Project>{543473c6-ef73-4d97-b2b8-adf7b93eb452}</Project>
     </ProjectReference>
@@ -121,7 +118,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OgreProject.lib;OgreMain.lib;SDL2.lib;SDL2main.lib;fmodL_vc.lib;fmod_vc.lib;PhysXProject.lib;OgreOverlay.lib</AdditionalDependencies>
+      <AdditionalDependencies>OgreProject.lib;OgreMain.lib;SDL2.lib;SDL2main.lib;fmodL_vc.lib;fmod_vc.lib;PhysXProject.lib;OgreOverlay.lib;Lua.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(solutionDir)Dependencies\Ogre\Build\lib\$(Configuration)\;$(solutionDir)Dependencies\Ogre\Build\$(Platform)\lib\$(Configuration)\;$(solutionDir)Dependencies\Ogre\Build\SDL2-build\$(Configuration)\;$(solutionDir)Dependencies\FMOD\libreria\$(Platform);$(solutionDir)Dependencies\PhysX-4.1\Build\$(Platform)\lib\$(Configuration)\;$(solutionDir)Dependencies\PhysX-4.1\Src\physx\bin\win.x86_64.vc142.mt\$(Configuration)\;$(solutionDir)Dependencies\PhysX-4.1\Src\physx\snippets\graphics\lib\win64\glut;$(solutionDir)Dependencies\Lua\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference>
